[API] Created endpoint to delete user
